--- a/backend/BankingApp/pom.xml
+++ b/backend/BankingApp/pom.xml
@@ -29,9 +29,14 @@
 		</dependency>
 		
 		<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-validation</artifactId>
-</dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+   			<groupId>org.hibernate.validator</groupId>
+   			<artifactId>hibernate-validator</artifactId>
+   		</dependency>
 		
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
