--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-form-validator-core": "^1.1.2",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-validation": "^3.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
