--- a/backend/BankingApp/src/main/resources/application.properties
+++ b/backend/BankingApp/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql:true
 #server.error.include-binding-errors=always
 #server.error.include-message=always
+jwt.secret=HR1EcK3trA
