--- a/backend/BankingApp/pom.xml
+++ b/backend/BankingApp/pom.xml
@@ -89,6 +89,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>CustomAuthenticationManager</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
