--- a/backend/BankingApp/pom.xml
+++ b/backend/BankingApp/pom.xml
@@ -84,6 +84,19 @@
 				<artifactId>modelmapper</artifactId>
 				<version>3.1.1</version>
 			</dependency>
+
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.2</version>
+</dependency>
+
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.9.3</version>
+</dependency>
+
 			
 			
 	</dependencies>
