--- a/backend/BankingApp/pom.xml
+++ b/backend/BankingApp/pom.xml
@@ -91,6 +91,14 @@
 			    <version>4.12</version>
 			    <scope>test</scope>
 			</dependency>
+			
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+			<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-mail</artifactId>
+			    <version>3.1.2</version>
+			</dependency>
+
 
 	</dependencies>
 
