--- a/backend/BankingApp/src/main/resources/application.properties
+++ b/backend/BankingApp/src/main/resources/application.properties
@@ -7,3 +7,17 @@ spring.jpa.show-sql:true
 #server.error.include-binding-errors=always
 #server.error.include-message=always
 jwt.secret=HR1EcK3trA
+
+
+#For logging testing related data
+spring-jpa.show-sql = true
+
+
+
+#For Sending OTP
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = team4wf@gmail.com
+spring.mail.password = macxuaqcvpswxhjy					#team4@SMJAS2023
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
